--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,16 +3,223 @@
   | include css partials with
   | default @import url()
   |============================
+  
 */
+
+@import 'normalize.css';
+@import 'flatpickr/dist/flatpickr.min.css';
+@import 'izitoast/dist/css/iziToast.min.css';
+
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
-@import url('./animations.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.nav-link {
+  display: block;
+  text-decoration: none;
+  color: #2e2f42;
+  transition:
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:hover {
+  text-decoration: underline;
+  color: #6c8cff;
+}
+
+.nav-list {
+  position: fixed;
+  top: 50px;
+  left: 50px;
+  margin-top: 20px;
+}
+
+.timer-action {
+  justify-content: center;
+  display: flex;
+  font-size: 0;
+  gap: 8px;
+}
+
+.datetime-picker {
+  max-width: 272px;
+  height: 40px;
+}
+
+.datetime-picker,
+.form-label input {
+  padding: 8px 16px;
+}
+
+.datetime-picker,
+.form-label input,
+fieldset {
+  font-family: 'Montserrat', serif;
+  font-size: 16px;
+  border-radius: 4px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  width: 100%;
+  border: 1px solid #808080;
+  transition: border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.datetime-picker:active,
+.datetime-picker:focus,
+.form input:active,
+.form input:focus {
+  color: #000;
+  border: 1px solid #4e75ff; 
+}
+
+.datetime-picker:focus-visible,
+.form input:focus-visible {
+  outline: none;
+}
+
+.datetime-picker:hover,
+.form-label input:hover,
+fieldset:has(input:hover),
+fieldset:has(input:focus),
+fieldset:has(input:active) {
+  border: 1px solid #000;
+}
+
+.datetime-picker[disabled] {
+  cursor: not-allowed;
+  border: 1px solid #808080;
+  color: #808080;
+  background-color: #fafafa;
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+  margin-top: 32px;
+  gap: 24px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 40px;
+  line-height: 1.2;
+  letter-spacing: 0.04em;
+}
+
+.label {
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+.button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 100%;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4e75ff;
+  transition:
+    background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.start-btn {
+  max-width: 75px;
+}
+
+.button:hover {
+  background: #6c8cff;
+}
+
+.button[disabled] {
+  cursor: not-allowed;
+  color: #989898;
+  background-color: #cfcfcf;
+}
+
+.flatpickr-calendar {
+  background: #f5f5f5;
+}
+
+.flatpickr-day:hover {
+  border-color: #c1c1c1;
+  background-color: #c1c1c1; 
+}
+
+.flatpickr-day.selected {
+  border-color: #4e75ff;
+  background-color: #4e75ff;
+}
+
+.flatpickr-day.today.selected {
+  background-color: transparent;
+  border-color: #4e75ff;
+  color: #666;
+}
+
+.flatpickr-current-month .flatpickr-monthDropdown-months,
+.flatpickr-current-month input.cur-year {
+  font-weight: 600;
+}
+
+.form {
+  max-width: 360px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.form-label {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.form-label input {
+  max-width: none;
+}
+
+fieldset {
+  display: flex;
+  justify-content: center;
+  padding: 0 0 8px;
+  margin-bottom: 24px;
+  gap: 48px;
+}
+
+fieldset label {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  gap: 14px;
+}
+
+
+input[type='radio'] {
+  height: 20px;
+  width: 20px; 
+}
+
+legend {
+  text-align: left;
+  margin-left: 28px;
+}
